[project]
name = "auto-scaling-infrastructure-agent"
version = "1.0.0"
description = "OpenEnv environment for cloud auto-scaling under SLA and budget constraints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "openai>=1.30.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
config = "openenv.yaml"